syntax = "proto3";
option go_package = "github.com/satont/twir/libs/api/messages/bots";
package messages.bots;

message BotInfo {
	bool is_mod = 1;
	string bot_id = 2;
	string bot_name = 3;
	bool enabled = 4;
}

message BotJoinPartRequest {
	enum Action {
		JOIN = 0;
		LEAVE = 1;
	}

	Action action = 1;
}
